# automatic-error-code-detector

./: Dockerfile  README.md  docker-compose.yml
error_detection/: CMakeLists.txt  package.xml
error_detection/launch/: error-detection.launch
error_detection/src/: error_detection.cpp
