<?xml version="1.0"?>
<package format="2">
  <name>error_detection</name>
  <version>0.1.0</version>
  <description>The error_detection package</description>

  <maintainer email="hammouda.alaaeddine@gmail.com">Ala Eddine Hammouda</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

</package>
